--- a/js_work/index.html
+++ b/js_work/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Основы JavaScript</title>
-    <link rel="icon" type="image/x-icon" href="../main/GG-icon.ico">
-    <link rel="stylesheet" href="../main/style.css">
+    <link rel="icon" type="image/x-icon" href="../GG-icon.ico">
+    <link rel="stylesheet" href="../style.css">
     <style>
         body {
             padding-top: 60px;
@@ -73,7 +73,7 @@
     <header>
         <nav>
             <ul class="nav">
-                <li><a href="../main/index.html">ГЛАВНАЯ</a></li>
+                <li><a href="../index.html">ГЛАВНАЯ</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">ЗАДАНИЯ</a>
                     <ul class="dropdown-menu">
