--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle">ЗАДАНИЯ</a>
                 <ul class="dropdown-menu">
-                  <li><a href="../ship/ship.html">Рисунок</a></li>
-                  <li><a href="../car/car.html">Анимация</a></li>
-                  <li><a href="../js_work/index.html">Основы JavaScript</a></li>
-                  <li><a href="../dom-тест/index.html">DOM-Тест</a></li>
-                  <li><a href="../words/index.html">Слова</a></li>
+                  <li><a href="ship/ship.html">Рисунок</a></li>
+                  <li><a href="car/car.html">Анимация</a></li>
+                  <li><a href="js_work/index.html">Основы JavaScript</a></li>
+                  <li><a href="dom-тест/index.html">DOM-Тест</a></li>
+                  <li><a href="words/index.html">Слова</a></li>
                 </ul>
               </li>
             </ul>
