--- a/dom-тест/index.html
+++ b/dom-тест/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
     <header>
+        <span class="page-title">DOM-Тест</span>
         <nav>
             <ul class="nav">
                 <li><a href="../index.html">ГЛАВНАЯ</a></li>
