--- a/js_work/index.html
+++ b/js_work/index.html
@@ -71,6 +71,7 @@
 </head>
 <body>
     <header>
+        <span class="page-title">Основы JavaScript</span>
         <nav>
             <ul class="nav">
                 <li><a href="../index.html">ГЛАВНАЯ</a></li>
