--- a/car/car.html
+++ b/car/car.html
@@ -28,6 +28,7 @@
 </head>
 <body>
   <header>
+    <span class="page-title">Анимация</span>
     <nav>
       <ul class="nav">
         <li><a href="../index.html">ГЛАВНАЯ</a></li>
