--- a/index.html
+++ b/index.html
@@ -9,23 +9,31 @@
 </head>
 <body>
     <header>
+        <span class="page-title">Главная</span>
         <nav>
-            <ul class="nav">
-              <li><a href="#main">ГЛАВНАЯ</a></li>
-              <li><a href="#gallery">ГАЛЕРЕЯ</a></li>
-              <li><a href="#application">ЗАЯВКА</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle">ЗАДАНИЯ</a>
-                <ul class="dropdown-menu">
-                  <li><a href="ship/ship.html">Рисунок</a></li>
-                  <li><a href="car/car.html">Анимация</a></li>
-                  <li><a href="js_work/index.html">Основы JavaScript</a></li>
-                  <li><a href="dom-тест/index.html">DOM-Тест</a></li>
-                  <li><a href="words/index.html">Слова</a></li>
+            <div class="hamburger-menu" id="hamburgerMenu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="hamburger-nav" id="hamburgerNav">
+                <ul class="nav">
+                    <li><a href="#main">ГЛАВНАЯ</a></li>
+                    <li><a href="#gallery">ГАЛЕРЕЯ</a></li>
+                    <li><a href="#application">ЗАЯВКА</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">ЗАДАНИЯ</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="ship/ship.html">Рисунок</a></li>
+                            <li><a href="car/car.html">Анимация</a></li>
+                            <li><a href="js_work/index.html">Основы JavaScript</a></li>
+                            <li><a href="dom-тест/index.html">DOM-Тест</a></li>
+                            <li><a href="words/index.html">Слова</a></li>
+                        </ul>
+                    </li>
                 </ul>
-              </li>
-            </ul>
-          </nav>
+            </div>
+        </nav>
     </header>
     
     
