--- a/ship/ship.html
+++ b/ship/ship.html
@@ -23,6 +23,7 @@
 </head>
 <body>
   <header>
+    <span class="page-title">Рисунок</span>
     <nav>
       <ul class="nav">
         <li><a href="../index.html">ГЛАВНАЯ</a></li>
