--- a/words/index.html
+++ b/words/index.html
@@ -24,6 +24,7 @@
 </head>
 <body>
     <header>
+        <span class="page-title">Слова</span>
         <nav>
             <ul class="nav">
                 <li><a href="../index.html">ГЛАВНАЯ</a></li>
